# HSB_

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  schema.graphql
config/: arbitrum.toml  base.toml  ethereum.toml  polygon.toml
docs/: arb-engine.md  architecture.md  executor.md  flow-hyperindex.md  flow-hypersync.md
executor/: foundry.toml
executor/src/: ArbExecutor.sol
executor/test/: ArbExecutor.t.sol
queries/: all_pairs.graphql
scripts/: call_executor.rs  deploy.rs  deploy.s.sol  encode_route.rs
src/: lib.rs  main.rs  types.rs  ui.rs
src/dex/: algebra.rs  balancer.rs  curve.rs  quickswap.rs  sushiswap.rs  uniswap_v2.rs  uniswap_v3.rs
src/engine/: arb.rs  decimals.rs  discovery_listener.rs  gas.rs  normalize.rs  pricing.rs  registry.rs  routing.rs  simulator.rs  snapshot.rs
src/executor/: builder.rs  builder_tri.rs  bundle.rs  encode.rs  types.rs
src/hyperindex/: discovery.rs  graphql.rs
src/hypersync/: decode.rs  filters.rs  subscriber.rs
src/universe/: allowlist.rs  events.rs  fetch.rs  filter.rs  manager.rs  mod.rs  scheduler.rs  types.rs
