[package]
name = "arbitrage-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
graphql_client = "0.14"
dashmap = "5"
ethers = { version = "2.0.14", features = ["abigen", "rustls"] }
hypersync-client = { git = "https://github.com/enviodev/hypersync-client-rust" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"

# TUI
ratatui = "0.26"
crossterm = "0.27"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
